# nrf

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  NORDIC_SDK_NOTES.md  NOTES.md  README.md  Toolchain-gcc-arm-none-eabi.cmake  arm_gcc_rules.mak  doxygen-config.txt  external_content.cmake  googletest  jlink_rules.mak  nRF5_SDK14.vpj  nRF5_SDK15.2.vpj  nrf.vpw  nrf5x_common.ld  nrf_test.vpj  post_elf_build.cmake  sdk  sdk-14  sdk-14.2  sdk-15  sdk-15.0  sdk-15.2  sdk-15.3
app_timer_test/: Makefile  app_timer_test.vpj
ble/: address.h  advertising.cc  advertising.h  advertising_data.h  att.h  battery_service.cc  battery_service.h  ble.vpj  ble_common_event_observer.h  ble_connection.h  ble_gap_event_observer.h  ble_gattc_event_observer.h  ble_gatts_event_observer.h  central_connection.h  common_event_observer.h  gap_address.h  gap_advertising.h  gap_advertising_data.h  gap_connection.cc  gap_connection.h  gap_connection_negotiation_state.cc  gap_connection_parameters.h  gap_event_logger.cc  gap_event_logger.h  gap_event_observable.h  gap_event_observer.h  gap_operations.h  gap_request_reply.h  gap_request_response.h  gap_scan_parameters.h  gap_scanning.h  gap_types.h  gatt_appearance.h  gatt_attribute.cc  gatt_attribute.h  gatt_characteristic.cc  gatt_characteristic.h  gatt_declaration.cc  gatt_declaration.h  gatt_descriptors.h  (+95 more)
ble_central/: CMakeLists.txt  Makefile  ble_central.ld  ble_central.vpj  ble_central_init.cc  ble_central_init.h  ble_gap_connection.cc  ble_gap_connection.h  ble_gattc_observer.cc  ble_gattc_observer.h  gdb-init  main.cc
ble_central_multilink_example/: Makefile  ble_central_multilink.vpj  gdb-init  main.c  main.cc
ble_peripheral/: CMakeLists.txt  Makefile  ble_event_handler.cc  ble_gap_connection.cc  ble_gap_connection.h  ble_gatts_observer.cc  ble_gatts_observer.h  ble_peripheral.vpj  ble_peripheral_init.cc  ble_peripheral_init.h  gdb-init  main.cc  nordic_saadc_sensor_acquisition.cc  nordic_saadc_sensor_acquisition.h
ble_peripheral_class/: Makefile  ble_gap_connection.cc  ble_gap_connection.h  ble_gap_observer.h  ble_gatts_observer.cc  ble_gatts_observer.h  ble_peripheral_class.ld  ble_peripheral_class.vpj  ble_peripheral_init.cc  ble_peripheral_init.h  gdb-init  main.cc  nordic_saadc_sensor_acquisition.cc  nordic_saadc_sensor_acquisition.h  old_advertising.cc  old_advertising.h
ble_peripheral_template/: Makefile  ble_peripheral_template.ld  ble_peripheral_template.vpj  gdb-init  main.cc
ble_peripheral_thermometer/: Makefile  ble_peripheral_thermometer.vpj  gdb-init  main.cc
ble_template_peripheral/: Makefile
ble_uart_central/: Makefile  ble_uart_central.vpj  main.cc
ble_uart_peripheral/: Makefile  ble_uart_peripheral.vpj  main.cc
common/: arm_gcc_rules.mak  jlink_rules.mak
doc/: BUILD.md  NORDIC.md  NORDIC_SOFTDEVICE_6.md  nordic_ble_conn_cfg.h
docs/: BUILD.md  C++.md  DEBUG.md  NORDIC.md  nordic.txt  nrf.EAP
gcc-arm/: arm_utilities.h  gcc-arm.vpj  gcc_exception_stubs.cc  gcc_startup_nrf52.s  gcc_stubs.cc  stack_usage.cc  stack_usage.h
logger/: logger.cc  logger.h  logger.vpj  logger_c.cc  logger_c.h  nrf_log.h  nrf_log_ctrl.h  rtt_output_stream.cc  rtt_output_stream.h  segger_rtt_output_stream.cc  segger_rtt_output_stream.h
make_rules/: arm_gcc_rules.mak  checker_rules.mak  jlink_rules.mak  version_git.mak
nordic/: app_error_fault_handler.cc  app_timer.cc  app_timer.h  device_address.h  nordic.vpj  nordic_critical_section.cc  nordic_critical_section.h  nordic_error.cc  nordic_error.h  nrf.vpj  nrf5x_common.ld  nrf_assert.h  nrf_cmsis.h  nrf_log.h  nrf_log_ctrl.h  nrf_log_default_backends.h  nrfx_log.h  rtc.cc  rtc.h  spim.cc  timer.cc
nordic/sdk-lib/: CMakeLists.txt  sdk_config.h
nordic/tests/twi_test/: CMakeLists.txt  Makefile  gdb-init  main.cc  test_twi.vpj
nrf/: buttons.h  buttons_pca10040.cc  clocks.cc  clocks.h  gcc_stubs.cc  leds.h  leds_pca10040.cc  nrf.vpj  nrf_assert.h  nrf_log.h  rtc.cc  rtc.h  rtc_debug.cc  spi_common.h  spim.cc  spim.h  spim_debug.cc  spim_debug.h  spis.cc  spis.h  spis_debug.cc  timer.cc  timer.h  timer_observer.cc  timer_observer.h
peripherals/: buttons_pca10040.cc  leds_pca10040.cc  peripherals.vpj  ppi.cc  ppi.h  rtc.cc  rtc.h  rtc_observer.h  saadc.cc  saadc.h  spim.cc  spim_debug.cc  spim_debug.h  spis.cc  timer.cc  timer.h  timer_observable_generic.h  timer_observer_generic.h
rtc_test/: Makefile  gdb-init  main.cc
saadc_test/: Makefile  gdb-init  main.cc  saadc_test.vpj
scripts/: find_check_errors  jlink-nrf  packet_loss.py
segger/: segger_rtt.cc  segger_rtt.h
segger_rtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h
spi_master/: Makefile  gdb-init  main.cc  nrf_spi_master.ld  nrf_spi_master.vpj  spi_master.vpj
spi_test/: Makefile  main.cc  spi_test.vpj
ti_cc112x/: cc112x_init_lowrate_wpan.c  cc112x_reg_AGC.h  cc112x_reg_CFM_DATA_CFG.h  cc112x_reg_CHAN_BW.h  cc112x_reg_DCFILT_CFG.h  cc112x_reg_ECG_CFG.h  cc112x_reg_EXT_CTRL.h  cc112x_reg_FS.h  cc112x_reg_IOCFGx.h  cc112x_reg_IQIC.h  cc112x_reg_MDMCFG.H  cc112x_reg_MODCFG_DEV_E.h  cc112x_reg_PA_CFG.h  cc112x_reg_PKT_CFG.h  cc112x_reg_PREAMBLE_CFG.h  cc112x_reg_RFEND.h  cc112x_reg_SYMBOL_RATE.h  cc112x_reg_SYNC_CFG1.h  cc112x_reg_TOC_CFG.h  cc112x_reg_WOR.h  cc112x_registers.h  cc112x_status.h
timer_test/: Makefile  gdb-init  main.cc  timer_observer_test.h  (+1 more)
unit_tests/: CMakeLists.txt  Makefile  assert_stubs.cc  null_stream.h  project_assert.h  rtc_stubs.cc  std_stream.h  test_bit_manip.cc  test_bit_manip.mak  test_ble_service.cc  test_ble_service_container.cc  test_fixed_allocator.cc  test_fixed_allocator.mak  test_format_conversion.cc  test_format_conversion.mak  test_gregorian.cc  test_gregorian.mak  test_int_to_string.cc  test_int_to_string.mak  test_logger.cc  test_make_array.cc  test_make_array.mak  test_observer.cc  test_observer.mak  test_uuid.cc  test_uuid.mak  unit_test_assert.cc  unit_tests.vpj
unit_tests/test_float_to_string/: Makefile  test_float_to_string.cc
unit_tests/test_vwritef/: Makefile  test_vwritef.cc
unit_tests/test_write_data/: Makefile  test_write_data.cc
(+167 files in other folders)
